# MyServer

./: CMakeLists.txt  README.md  TODO  main.cpp  send
NetIO/: CMakeLists.txt  Connection.cpp  Connection.h  EpollService.cpp  EpollService.h  ISock.cpp  ISock.h
SafeContainer/: SafeList.h  SafeQueue.h  SafeVector.h
Service/: CMakeLists.txt  Connection.cpp  Connection.h  EpollService.cpp  EpollService.h  MsgDispatcher.cpp  MsgDispatcher.h  PidAllocator.cpp  PidAllocator.h
Service/MsgAdapter/: CMakeLists.txt  IMessage.h  MsgDefine.h  MsgEncoder.cpp  MsgEncoder.h  RegisterMessage.h  ReqMessage.h  RspMessage.h
Service/MsgHandler/: CMakeLists.txt  DisConnctionMsgHandler.cpp  DisConnctionMsgHandler.h  HeartBeat.cpp  HeartBeat.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgHanlder.h  RegisterMsgHandler.cpp  RegisterMsgHandler.h
Socket/: CMakeLists.txt  ISock.cpp  ISock.h
framework/: CMakeLists.txt
framework/DBAdapter/: CMakeLists.txt  DBOperator.cpp  DBOperator.h  ITableRecord.h  TableCache.h
framework/DBAdapter/UserInfo/: CMakeLists.txt  UserInfoTable.cpp  UserInfoTable.h
framework/LOG/: CMakeLists.txt  LOG.cpp  LOG.h  LOGDefines.h
framework/Observer/: Observer.cpp  Observer.h
framework/Pool/: CMakeLists.txt  ObjectPool.h  ThreadPool.cpp  ThreadPool.h
framework/Singleton/: Singleton.h
framework/Timer/: CMakeLists.txt  ITimerListener.cpp  ITimerListener.h  Timer.cpp  Timer.h
framework/Utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.h
include/: Defines.h  ISock.h  LOG.h  ObjectPool.h  Observer.h  SafeList.h  SafeQueue.h  SafeVector.h  Singleton.h  ThreadPool.h  Timer.h  Utils.h
src/: Client.cpp  ISock.cpp  LOG.cpp  Observer.cpp  Server.cpp  ThreadPool.cpp  Timer.cpp  test  test.cpp
test/: Client.cpp  Server.cpp  test.cpp
